--- a/redux-store.html
+++ b/redux-store.html
@@ -37,8 +37,10 @@
   }
   const store = Redux.createStore(
     reducer,
-    Redux.applyMiddleware(ReduxThunk.default)
-  );
+    Redux.compose(
+    Redux.applyMiddleware(ReduxThunk.default),
+    window.devToolsExtension && window.devToolsExtension()
+  )); 
   const ReduxMixin = PolymerRedux(store);
 
   const AsyncActionsMixin = superclass => class extends superclass {
