--- a/redux-store.html
+++ b/redux-store.html
@@ -35,12 +35,14 @@
         });
     }
   }
-  const store = Redux.createStore(
+  var store = Redux.createStore(
     reducer,
     Redux.compose(
-    Redux.applyMiddleware(ReduxThunk.default),
-    window.devToolsExtension && window.devToolsExtension()
-  )); 
+      Redux.applyMiddleware(ReduxThunk.default), 
+      window.devToolsExtension ?
+      window.devToolsExtension() :
+      v => v
+    ));
   const ReduxMixin = PolymerRedux(store);
 
   const AsyncActionsMixin = superclass => class extends superclass {
